--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,9 +70,11 @@ dependencies {
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.33-beta"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.33-beta"
 
-    def glide = "4.11.0"
-    implementation "com.github.bumptech.glide:glide:$glide"
-    kapt "com.github.bumptech.glide:compiler:$glide"
+    implementation "com.github.bumptech.glide:glide:4.11.0"
+    kapt "com.github.bumptech.glide:compiler:4.11.0"
 
     implementation "androidx.paging:paging-runtime-ktx:3.0.0" // For Kotlin use paging-runtime-ktx
+
+    // Viewpager 2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
