implementing movie details

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,9 @@ plugins {
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
-
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.themovieviewer"
         minSdkVersion 27
