--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ plugins {
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
     }
     defaultConfig {
         applicationId "com.themovieviewer"
@@ -85,6 +85,9 @@ dependencies {
     //Room
     implementation "androidx.room:room-runtime:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    androidTestImplementation "androidx.room:room-testing:2.3.0"
+
 
     //WorkManager
     implementation "androidx.work:work-runtime-ktx:2.6.0-alpha02"
