--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
 }
 
+apply from: "../ktlint.gradle"
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
