--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import com.themovieviewer.Versions
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -10,7 +12,7 @@ plugins {
 apply from: "../ktlint.gradle"
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 32
     buildToolsVersion "30.0.3"
     buildFeatures {
         dataBinding = true
@@ -18,7 +20,7 @@ android {
     defaultConfig {
         applicationId "com.themovieviewer"
         minSdkVersion 27
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
@@ -36,7 +38,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8
     }
     buildFeatures {
         viewBinding true
@@ -47,41 +49,41 @@ dependencies {
 
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${Versions.KOTLIN_VERSION}"
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${Versions.KTX}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${Versions.KTX}"
+    implementation "androidx.navigation:navigation-fragment-ktx:${Versions.KTX}"
+    implementation "androidx.navigation:navigation-ui-ktx:${Versions.KTX}"
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:${Versions.RETROFIT}"
+    implementation "com.squareup.retrofit2:converter-gson:${Versions.RETROFIT}"
     // Retrofit Coroutines Support
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     //Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1-native-mt"
 
     // Hilt dependencies
-    implementation "com.google.dagger:hilt-android:2.33-beta"
-    kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
+    implementation "com.google.dagger:hilt-android:2.41"
+    kapt "com.google.dagger:hilt-android-compiler:2.41"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // Hilt testing dependencies
-    androidTestImplementation "com.google.dagger:hilt-android-testing:2.33-beta"
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.33-beta"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.41"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.41"
 
-    implementation "com.github.bumptech.glide:glide:4.11.0"
-    kapt "com.github.bumptech.glide:compiler:4.11.0"
+    implementation "com.github.bumptech.glide:glide:${Versions.GLIDE}"
+    kapt "com.github.bumptech.glide:compiler:4.13.1"
 
-    implementation "androidx.paging:paging-runtime-ktx:3.0.1" // For Kotlin use paging-runtime-ktx
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1" // For Kotlin use paging-runtime-ktx
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     // Viewpager 2
