--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = JavaVersion.VERSION_11
     }
     buildFeatures {
         viewBinding true
@@ -50,14 +50,14 @@ dependencies {
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${Versions.KOTLIN_VERSION}"
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "androidx.core:core-ktx:${Versions.CORE_KTX}"
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${Versions.KTX}"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${Versions.KTX}"
-    implementation "androidx.navigation:navigation-fragment-ktx:${Versions.KTX}"
-    implementation "androidx.navigation:navigation-ui-ktx:${Versions.KTX}"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${Versions.LIFECYCLE_KTX}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${Versions.LIFECYCLE_KTX}"
+    implementation "androidx.navigation:navigation-fragment-ktx:${Versions.NAVIGATION_KTX}"
+    implementation "androidx.navigation:navigation-ui-ktx:${Versions.NAVIGATION_KTX}"
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -66,36 +66,36 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:${Versions.RETROFIT}"
     implementation "com.squareup.retrofit2:converter-gson:${Versions.RETROFIT}"
     // Retrofit Coroutines Support
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:${Versions.RETROFIT_COROUTINES}"
     //Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1-native-mt"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${Versions.COROUTINES}"
 
     // Hilt dependencies
-    implementation "com.google.dagger:hilt-android:2.41"
-    kapt "com.google.dagger:hilt-android-compiler:2.41"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    implementation "com.google.dagger:hilt-android:${Versions.HILT}"
+    kapt "com.google.dagger:hilt-android-compiler:${Versions.HILT}"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:${Versions.HILT_LIFECYCLE_VIEW_MODEL}"
+    kapt "androidx.hilt:hilt-compiler:${Versions.HILT_COMPILER}"
 
     // Hilt testing dependencies
-    androidTestImplementation "com.google.dagger:hilt-android-testing:2.41"
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.41"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:${Versions.HILT}"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:${Versions.HILT}"
 
     implementation "com.github.bumptech.glide:glide:${Versions.GLIDE}"
-    kapt "com.github.bumptech.glide:compiler:4.13.1"
+    kapt "com.github.bumptech.glide:compiler:${Versions.GLIDE}"
 
     implementation "androidx.paging:paging-runtime-ktx:3.1.1" // For Kotlin use paging-runtime-ktx
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     // Viewpager 2
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "androidx.viewpager2:viewpager2:${Versions.VIEWPAGER2}"
 
     //Room
-    implementation "androidx.room:room-runtime:2.3.0"
-    implementation "androidx.room:room-ktx:2.3.0"
-    kapt "androidx.room:room-compiler:2.3.0"
-    androidTestImplementation "androidx.room:room-testing:2.3.0"
-
+    implementation "androidx.room:room-runtime:${Versions.ROOM}"
+    implementation "androidx.room:room-ktx:${Versions.ROOM}"
+    implementation "androidx.room:room-paging:${Versions.ROOM}"
+    kapt "androidx.room:room-compiler:${Versions.ROOM}"
+    androidTestImplementation "androidx.room:room-testing:${Versions.ROOM}"
 
     //WorkManager
-    implementation "androidx.work:work-runtime-ktx:2.6.0-rc01"
+    implementation "androidx.work:work-runtime-ktx:${Versions.WORK_KTX}"
 }
