migrating groovy to kotlin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,7 @@ dependencies {
 
     //WorkManager
     implementation "androidx.work:work-runtime-ktx:${Versions.WORK_KTX}"
+
+    implementation(project(":model"))
+    implementation(project(":core-data"))
 }
