--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ android {
     }
     buildFeatures {
         viewBinding true
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.2.0-alpha07"
     }
 }
 
@@ -53,7 +57,7 @@ dependencies {
     implementation "androidx.core:core-ktx:${Versions.CORE_KTX}"
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:${Versions.LIFECYCLE_KTX}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${Versions.LIFECYCLE_KTX}"
     implementation "androidx.navigation:navigation-fragment-ktx:${Versions.NAVIGATION_KTX}"
@@ -86,6 +90,9 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:3.1.1" // For Kotlin use paging-runtime-ktx
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
+    implementation "androidx.compose.material3:material3:${Versions.MATERIAL3}"
+    implementation "androidx.compose.material3:material3-window-size-class:${Versions.MATERIAL3}"
+
     // Viewpager 2
     implementation "androidx.viewpager2:viewpager2:${Versions.VIEWPAGER2}"
 
@@ -102,4 +109,5 @@ dependencies {
 
     implementation(project(":model"))
     implementation(project(":core-data"))
+    implementation(project(":core-ui"))
 }
