--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,10 +42,10 @@ android {
     }
     buildFeatures {
         viewBinding true
-        compose true
+        compose = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.2.0-alpha07"
+        kotlinCompilerExtensionVersion = "1.2.0-alpha03"
     }
 }
 
@@ -55,22 +55,33 @@ dependencies {
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${Versions.KOTLIN_VERSION}"
     implementation "androidx.core:core-ktx:${Versions.CORE_KTX}"
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${Versions.LIFECYCLE_KTX}"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${Versions.LIFECYCLE_KTX}"
-    implementation "androidx.navigation:navigation-fragment-ktx:${Versions.NAVIGATION_KTX}"
-    implementation "androidx.navigation:navigation-ui-ktx:${Versions.NAVIGATION_KTX}"
+    implementation "androidx.appcompat:appcompat:${Versions.APPCOMPAT}"
+
+    //LIFECYCLE
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:${Versions.LIFECYCLE_KTX}")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:${Versions.LIFECYCLE_KTX}")
+
+    //NAVIGATION
+    implementation("androidx.navigation:navigation-fragment-ktx:${Versions.NAVIGATION_KTX}")
+    implementation("androidx.navigation:navigation-ui-ktx:${Versions.NAVIGATION_KTX}")
+
+    implementation "androidx.paging:paging-runtime-ktx:${Versions.PAGING}"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+    implementation "androidx.viewpager2:viewpager2:${Versions.VIEWPAGER2}"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1" // For Kotlin use paging-runtime-ktx
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    //TEST
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //RETROFIT
     implementation "com.squareup.retrofit2:retrofit:${Versions.RETROFIT}"
     implementation "com.squareup.retrofit2:converter-gson:${Versions.RETROFIT}"
-    // Retrofit Coroutines Support
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:${Versions.RETROFIT_COROUTINES}"
+
     //Kotlin Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${Versions.COROUTINES}"
 
@@ -84,17 +95,15 @@ dependencies {
     androidTestImplementation "com.google.dagger:hilt-android-testing:${Versions.HILT}"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:${Versions.HILT}"
 
+    //GLIDE
     implementation "com.github.bumptech.glide:glide:${Versions.GLIDE}"
     kapt "com.github.bumptech.glide:compiler:${Versions.GLIDE}"
 
-    implementation "androidx.paging:paging-runtime-ktx:3.1.1" // For Kotlin use paging-runtime-ktx
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-
-    implementation "androidx.compose.material3:material3:${Versions.MATERIAL3}"
-    implementation "androidx.compose.material3:material3-window-size-class:${Versions.MATERIAL3}"
-
-    // Viewpager 2
-    implementation "androidx.viewpager2:viewpager2:${Versions.VIEWPAGER2}"
+    //material
+    implementation("com.google.android.material:material:${Versions.MATERIAL}")
+    implementation("androidx.compose.material:material-icons-extended:${Versions.COMPOSE}")
+    implementation("androidx.compose.material3:material3:${Versions.MATERIAL3}")
+    implementation("androidx.compose.material3:material3-window-size-class:${Versions.MATERIAL3}")
 
     //Room
     implementation "androidx.room:room-runtime:${Versions.ROOM}"
@@ -105,9 +114,37 @@ dependencies {
 
     //WorkManager
     implementation "androidx.work:work-runtime-ktx:${Versions.WORK_KTX}"
-    implementation "androidx.paging:paging-runtime-ktx:${Versions.PAGING}"
+
+//    // Compose
+    implementation("androidx.compose.runtime:runtime:${Versions.COMPOSE}")
+    implementation("androidx.compose.foundation:foundation-layout:${Versions.COMPOSE}")
+    implementation("androidx.compose.runtime:runtime-livedata:${Versions.COMPOSE}")
+    implementation("androidx.compose.ui:ui:${Versions.COMPOSE}")
+    implementation("androidx.compose.ui:ui-tooling-preview:${Versions.COMPOSE}")
+    implementation("androidx.compose.ui:ui-test-junit4:${Versions.COMPOSE}")
+    implementation("androidx.activity:activity-compose:${Versions.ACTIVITY_COMPOSE}")
+    implementation("androidx.navigation:navigation-compose:${Versions.NAVIGATION_COMPOSE}")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:${Versions.VIEWMODEL_COMPOSE}")
+
+//    implementation "androidx.compose.ui:ui:1.2.0-beta02"
+//    // Integration with activities
+//    implementation 'androidx.activity:activity-compose:1.4.0'
+//    // Compose Material Design˛
+//    implementation 'androidx.compose.material:material:1.1.1'
+//    // Animations
+//    implementation 'androidx.compose.animation:animation:1.1.1'
+//    // Tooling support (Previews, etc.)
+//    implementation 'androidx.compose.ui:ui-tooling:1.2.0-beta02'
+//    // constraint layout
+//    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+//    // image loader library
+//    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+//    // Integration with ViewModels
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
+////    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+//    implementation "androidx.compose.ui:ui-util:1.2.0-beta02"
 
     implementation(project(":model"))
     implementation(project(":core-data"))
-    implementation(project(":core-ui"))
+//    implementation(project(":core-ui"))
 }
