--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+import com.themovieviewer.Versions
+
 buildscript {
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.41"
+        classpath 'com.android.tools.build:gradle'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.KOTLIN_VERSION}"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
