--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.themovieviewer">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:name=".presentation.BaseApplication"
+        android:name=".BaseApplication"
         android:exported="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TheMovieViewer">
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.TheMovieViewer.NoActionBar"
             android:exported="true">
