--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,4 +132,5 @@ dependencies {
     implementation(project(":core-ui"))
     implementation(project(":core-common"))
     implementation(project(":feature-movielist"))
+    implementation(project(":feature-favorites"))
 }
