--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.20"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.20'
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
         // NOTE: Do not place your application dependencies here; they belong
