--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,4 +138,5 @@ dependencies {
     implementation(project(":core-common"))
     implementation(project(":feature-movielist"))
     implementation(project(":feature-favorites"))
+    implementation(project(":feature-details"))
 }
