--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,13 @@
         </activity>
         <activity
             android:name=".presentation.TrailerActivity"
-            android:label="@string/app_name"
             android:theme="@style/Theme.TheMovieViewer.NoActionBar">
         </activity>
+        <activity
+            android:name=".feature.details.DetailsActivity"
+            android:theme="@style/Theme.TheMovieViewer.NoActionBar">
+        </activity>
+
     </application>
 
 </manifest>
