--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,6 +136,7 @@ dependencies {
     implementation(project(":core-data"))
     implementation(project(":core-ui"))
     implementation(project(":core-common"))
+    implementation(project(":core-datastore"))
     implementation(project(":feature-movielist"))
     implementation(project(":feature-favorites"))
     implementation(project(":feature-details"))
