--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.40"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
         classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.18"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -36,3 +37,4 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
