--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ android {
         compose = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.2.0-alpha08"
+        kotlinCompilerExtensionVersion = "1.2.0-beta01"
     }
     hilt {
         enableAggregatingTask = true
