--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
+    id("org.jlleitschuh.gradle.ktlint") version "10.3.0"
 }
 
 apply from: "../ktlint.gradle"
